@@ -19,6 +19,7 @@
 	#3475: Calling sync on large filesystems when not always necessary
 	#3511: make busybox-menuconfig does not download busybox package
 	#3541: Quotes in the top Makefile:217 break buildroot/kernel config...
+	#3571: u-boot: fw_printenv does not build
 	#3643: popt source url is not responding
 
 2011.02, Released February 28th, 2011:
